[package]
name = "mine_sweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1 

[dependencies]
bevy = "0.9"
board_plugin = { path = "../board_plugin" }

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.17", optional = true }